Fix Footer alignment

--- a/project/fraction/components/Footer.styles.css
+++ b/project/fraction/components/Footer.styles.css
@@ -30,6 +30,11 @@
   font-size: 15px;
 }
 
+.item a {
+  display: inline-block;
+  line-height: 1.2;
+}
+
 .item:not(:last-of-type) {
   margin-bottom: var(--fraction-space-2);
 }
